package com.closedsource.qualitrack.platform.equipment.domain.model.entities;

import com.closedsource.qualitrack.platform.equipment.domain.model.commands.ConfigureBpmParametersCommand;
import com.closedsource.qualitrack.platform.equipment.domain.model.valueobjects.CriticalVariable;
import lombok.Getter;

import java.util.Objects;

/**
 * The BpmParameterConfig domain entity.
 *
 * <p>Represents the valid operating range for a specific parameter associated with a piece of equipment.
 * Modeled as an entity within the Equipment aggregate to allow tracking of threshold
 * configurations independently, while still logically belonging to a single Equipment.</p>
 */
@Getter
public class BpmParameterConfig {

    /**
     * The unique internal numeric identifier for the parameter configuration entity.
     */
    private Long id;

    /**
     * The numeric identifier of the equipment associated with this configuration.
     */
    private Long equipmentId;

    /**
     * The name of the parameter being configured, modeled as a Value Object.
     * (e.g., Temperature, Pressure, Humidity).
     */
    private CriticalVariable parameterName;

    /**
     * The minimum acceptable value for the parameter.
     */
    private Double minValue;

    /**
     * The maximum acceptable value for the parameter.
     */
    private Double maxValue;

    /**
     * The measurement unit associated with the parameter (e.g., °C, bar, %).
     */
    private String unit;

    /**
     * Default constructor.
     * <p>Required by the persistence and mapping layers (Assemblers) to reconstruct
     * the entity from the database without triggering business logic.</p>
     */
    public BpmParameterConfig() {
        // Required for reconstruction by JPA or Assemblers
    }

    /**
     * Reconstructs a BpmParameterConfig entity from persistence data.
     *
     * @param id The unique numeric ID.
     * @param equipmentId The associated equipment ID.
     * @param parameterName The critical variable value object.
     * @param minValue The minimum threshold.
     * @param maxValue The maximum threshold.
     * @param unit The measurement unit.
     */
    public BpmParameterConfig(Long id, Long equipmentId, CriticalVariable parameterName, Double minValue, Double maxValue, String unit) {
        this.id = id;
        this.equipmentId = equipmentId;
        this.parameterName = parameterName;
        this.minValue = minValue;
        this.maxValue = maxValue;
        this.unit = unit;
    }

    /**
     * Constructs a new BpmParameterConfig from a configuration command.
     * <p>The numeric ID is left null to be auto-generated by the persistence mechanism.</p>
     *
     * @param command The configuration command containing the parameters.
     */
    public BpmParameterConfig(ConfigureBpmParametersCommand command) {
        this.equipmentId = Objects.requireNonNull(command.equipmentId(), "Equipment ID is required");
        this.parameterName = new CriticalVariable(command.parameterName());

        if (command.minValue() == null || command.maxValue() == null) {
            throw new IllegalArgumentException("Minimum and maximum values are required");
        }
        if (command.minValue() >= command.maxValue()) {
            throw new IllegalArgumentException("Minimum value must be strictly less than maximum value");
        }
        this.minValue = command.minValue();
        this.maxValue = command.maxValue();

        if (command.unit() == null || command.unit().isBlank()) {
            throw new IllegalArgumentException("Unit cannot be null or blank");
        }
        this.unit = command.unit();
    }

    /**
     * Updates the threshold limits for the parameter.
     * <p>Enforces Fail-Fast validation to ensure the new limits are logically valid.</p>
     *
     * @param newMinValue The new minimum threshold.
     * @param newMaxValue The new maximum threshold.
     */
    public void updateLimits(Double newMinValue, Double newMaxValue) {
        if (newMinValue == null || newMaxValue == null) {
            throw new IllegalArgumentException("Minimum and maximum values are required");
        }
        if (newMinValue >= newMaxValue) {
            throw new IllegalArgumentException("Minimum value must be strictly less than maximum value");
        }
        this.minValue = newMinValue;
        this.maxValue = newMaxValue;
    }
}